2007-12-15  Andreas Kirschbaum

	* Do not crash when metaserver is not available.

2007-12-14  Andreas Kirschbaum

	* Do not crash if the server connection breaks. Change ESC
	behavior: disconnect from server if connected or exit application
	if not connected.

	* Make the window close button in non-full screen mode work.

2007-12-12  Andreas Kirschbaum

	* Support command lists ("cmd1;cmd2;cmd3").

	* Make text input fields scroll when the cursor would move out of
	the visible area.

2007-12-11  Andreas Kirschbaum

	* Add optional parameters to 'commandlist' skin command. Use them
	to shorten skin definitions.

	* Make sure the login dialog never looses focus.

	* Implement 'set_modal' skin command: it marks a dialog as
	"modal". Use this to prevent query, quit, and keybinding dialogs
	from losing the focus.

2007-12-11  Andreas Kirschbaum

	* Implement autorepeat buttons. Use these for message window and
	item lists.

2007-12-10  Andreas Kirschbaum

	* Add splash screen.

	* Implement "poisoned" warning: displays a symbol above the player
	while being poisoned.

	* Scroll magic map when character moves.

	* Make sure all text in the command input field is visible.
	(default)

	* Move inventory and status dialogs to not overlap. (ragnorok)

2007-12-09  Andreas Kirschbaum

	* Add new skin 'ragnorok'.

	* Implement 'dialog_hide' skill command to hide dialogs in certain
	gui states.

	* Add support for transparent dialogs.

	* Implement 'log_color' skin command to override default color
	mapping in 'log' elements. Fix default color mapping.

	* Add "container close" button when a container is open.

	* Implement 'label_multi' skin command that display a multi-line
	label.

	* Extend the syntax in skin files for multi-line text strings.

	* Implement per-dialog key bindings; use it in meta server dialog.

2007-12-08  Andreas Kirschbaum

	* Implement cursor for text input fields.

	* Add format specifier to 'meta_element' skin command.
